2002-05-28  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ConvertSGMLChars): Make this work correctly
	for empty elements and XML comments in doc comments.

2002-05-27  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ReadTemplateFile, OutputSGMLFile): 
	Use only the basename of the template file in the key for the
	symbol table, in order to decouple the file extensions of the
	template files and the generated entities (we want to generate
	.xml entities from .sgml template files when emitting XML). 

2002-05-25  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ConvertSGMLChars): New function which tries to
	be a bit more clever when escaping SGML syntax characters. 
	(ScanSourceFile): Use ConvertSGMLChars instead of CreateValidSGML.
	This reduces the work needed to make gtk-doc emit XML (where <, &
	and friends must always be escaped).

2002-05-18  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkhtml.in: Detect whether we're processing SGML or XML. 

	* gtkdoc-mkdb.in: New option --output-format to switch between
	SGML and XML output.

	* Makefile.am (EXTRA_DIST): Add xml.dcl
	
	* xml.dcl: The XML declaration.

2002-05-06  jacob berkman  <jacob@ximian.com>

	* gtkdoc-scangobj.in: add an include for the GTK_CHECK_VERSION
	macro

2002-05-05  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: Output style properties.  (#80659)

	* gtkdoc-mkdb.in (GetArgs): Return separate sections for
	properties, child properties and style properties.  (#80659)

2002-05-03  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: Fix for segfault in scangobj-generated C
	program on Solaris.  (#80606, Jacob Berkman)

2002-05-01  Matthias Clasen  <maclas@gmx.de>

	* tools/docpercentages.pl: Add the script which Owen uses for the 
	d.g.o online API docs. Its easier to keep in sync here.

	* gtkdoc-mkdb.in (OutputMissingDocumentation): Fix
	$MODULE-undocumented.txt for d.g.o online API docs.
	
	* gtkdoc-mkdb.in (GetArgs): Use blurbs for property documentation.
